# IQX_backend

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SCRIPTS.md  demo.py  pyproject.toml  start.sh  stop.sh
.auto-claude/insights/sessions/: session-1766758526426.json
.auto-claude/specs/001-hello-bro/: implementation_plan.json
alembic/: env.py
alembic/versions/: 002_create_symbols_and_industries.py  004_create_watchlist_table.py  005_create_stock_ohlc_daily.py  006_add_ma_columns_to_ohlc.py
app/: main.py
app/application/ai_insight/: __init__.py  dtos.py  services.py
app/application/chat/: __init__.py  dtos.py  services.py
app/application/financial/: __init__.py  dtos.py  services.py
app/application/insight/: dtos.py  services.py
app/application/macro/: services.py
app/core/: async_utils.py  cache.py  config.py  icb_codes.py  logging.py
app/infrastructure/: scheduler.py
app/presentation/: exception_handlers.py
backend/: .env.example  pyproject.toml  requirements.txt  restart.sh  setup.sh  start.sh
backend/app/: __init__.py  main.py
backend/scripts/: analyze_vnstock.py  analyze_vnstock_v2.py  analyze_vnstock_v4.py  seed_admin.py  test_stats.py
backend/tests/: test_trading.py  test_trading_flow.py
data/: all_symbols.json  officers_VCB.json  overview_VCB.json
docs/: score-api.md
docs/plans/: 2026-01-09-score-api-design.md
scripts/: analyze_vnstock_v3.py  benchmark_api.py  ohlc_sync.py  sync_symbols.py  test_foreign_trade.py
static/: test_realtime.html
tests/: conftest.py  test_auth.py  test_trading_real_api.py
(+131 files in other folders)
