[project]
name = "iqx-backend"
version = "1.0.0"
description = "IQX Backend API with FastAPI and Clean Architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiomysql>=0.2.0",
    "alembic>=1.13.1",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.2",
    "python-multipart>=0.0.6",
    "python-socketio[asyncio_client]>=5.10.0",
    "openai>=1.54.0",
    "httpx>=0.27.0",
    "apscheduler>=3.10.4",
    "requests>=2.32.5",
    "vnstock>=3.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "httpx>=0.26.0",
    "aiosqlite>=0.19.0",
    "ruff>=0.1.13",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
